force-app/main/default/objects/Campaign/fields/Presenting__c.field-meta.xml
<CustomField>
    <fullName>Presenting__c</fullName>
    <description>Person will be presenting at the conference, training or workshop</description>
    <label>Presenting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Betsy Mayotte</fullName>
            </value>
            <value>
                <fullName>Bob Cole</fullName>
            </value>
            <value>
                <fullName>Caroline Menendez</fullName>
            </value>
            <value>
                <fullName>Casey Wallen</fullName>
            </value>
            <value>
                <fullName>Chris Elam</fullName>
            </value>
            <value>
                <fullName>David Snow</fullName>
            </value>
            <value>
                <fullName>Fidel Calero</fullName>
            </value>
            <value>
                <fullName>Gina Lucente-Cole</fullName>
            </value>
            <value>
                <fullName>Jacqueline Carroll</fullName>
            </value>
            <value>
                <fullName>Jay Sweeney</fullName>
            </value>
            <value>
                <fullName>Jill Marr</fullName>
            </value>
            <value>
                <fullName>Joanne Dashiell</fullName>
            </value>
            <value>
                <fullName>John Kelly</fullName>
            </value>
            <value>
                <fullName>Jonathan Sparling</fullName>
            </value>
            <value>
                <fullName>Julie Esau</fullName>
            </value>
            <value>
                <fullName>Kevin Fudge</fullName>
            </value>
            <value>
                <fullName>Lorinda Diehl</fullName>
            </value>
            <value>
                <fullName>Mae St. Julien</fullName>
            </value>
            <value>
                <fullName>Michael Friedman</fullName>
            </value>
            <value>
                <fullName>Paul Combe</fullName>
            </value>
            <value>
                <fullName>Robert Tosh</fullName>
            </value>
            <value>
                <fullName>Sarah Arslanian</fullName>
            </value>
            <value>
                <fullName>Susan Nathan</fullName>
            </value>
            <value>
                <fullName>Tanya Tanaro</fullName>
            </value>
            <value>
                <fullName>Tracy Drechsler</fullName>
            </value>
            <value>
                <fullName>Vince Scalise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>