force-app/main/default/objects/Campaign/fields/Primary_BD__c.field-meta.xml
<CustomField>
    <fullName>Primary_BD__c</fullName>
    <label>BD Primary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alan Ishida</fullName>
            </value>
            <value>
                <fullName>William Fortier</fullName>
            </value>
            <value>
                <fullName>Bob Cole</fullName>
            </value>
            <value>
                <fullName>Caroline Menendez</fullName>
            </value>
            <value>
                <fullName>Casey Wallen</fullName>
            </value>
            <value>
                <fullName>Chris Elam</fullName>
            </value>
            <value>
                <fullName>David Snow</fullName>
            </value>
            <value>
                <fullName>Jay Sweeney</fullName>
            </value>
            <value>
                <fullName>Julie Esau</fullName>
            </value>
            <value>
                <fullName>Mae St. Julien</fullName>
            </value>
            <value>
                <fullName>Michael Friedman</fullName>
            </value>
            <value>
                <fullName>Reis Hagerman</fullName>
            </value>
            <value>
                <fullName>Sarah Arslanian</fullName>
            </value>
            <value>
                <fullName>Tanya Tanaro</fullName>
            </value>
            <value>
                <fullName>Tracy Drechsler</fullName>
            </value>
            <value>
                <fullName>Vince Scalise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>