force-app/main/default/objects/Campaign/fields/ProfesionalDevelopment_Training__c.field-meta.xml
<CustomField>
    <fullName>ProfesionalDevelopment_Training__c</fullName>
    <description>People attending conference for Training/Professional Development</description>
    <label>Professional Development - Training</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andrew Marley</fullName>
            </value>
            <value>
                <fullName>Bill Fortier</fullName>
            </value>
            <value>
                <fullName>Bob Cole</fullName>
            </value>
            <value>
                <fullName>Caroline Menendez</fullName>
            </value>
            <value>
                <fullName>David Snow</fullName>
            </value>
            <value>
                <fullName>Farida Bahador</fullName>
            </value>
            <value>
                <fullName>Gina Lucenta-Cole</fullName>
            </value>
            <value>
                <fullName>Jacquie Carroll</fullName>
            </value>
            <value>
                <fullName>Jason Sweeney</fullName>
            </value>
            <value>
                <fullName>Jill Marr</fullName>
            </value>
            <value>
                <fullName>John Kelly</fullName>
            </value>
            <value>
                <fullName>Julie Esau</fullName>
            </value>
            <value>
                <fullName>Robert Tosh</fullName>
            </value>
            <value>
                <fullName>Sue Nathan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>