force-app/main/default/objects/Campaign/fields/Program_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Start_Date__c</fullName>
    <label>Program Start Date</label>
    <type>Date</type>
</CustomField>