force-app/main/default/objects/Campaign/fields/QR_Code_Valid_FRom__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_Valid_FRom__c</fullName>
    <label>QR Code Valid From</label>
    <type>DateTime</type>
</CustomField>