force-app/main/default/objects/Campaign/fields/QR_Code_Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_Valid_Until__c</fullName>
    <label>QR Code Valid Until</label>
    <type>DateTime</type>
</CustomField>