force-app/main/default/objects/Campaign/fields/Registration_List_Details__c.field-meta.xml
<CustomField>
    <fullName>Registration_List_Details__c</fullName>
    <label>Registration List Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>