force-app/main/default/objects/Campaign/fields/Related_Organization__c.field-meta.xml
<CustomField>
    <fullName>Related_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account this campaign is related to (if applicable)</description>
    <inlineHelpText>The Account this campaign is related to</inlineHelpText>
    <label>Related Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>