force-app/main/default/objects/Campaign/fields/Reminder_Email_Flag__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Email_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder Email Flag</label>
    <type>Checkbox</type>
</CustomField>