force-app/main/default/objects/Campaign/fields/Rep_Cost__c.field-meta.xml
<CustomField>
    <fullName>Rep_Cost__c</fullName>
    <label>Rep Cost</label>
    <summarizedField>Campaign_ASA_Attendees__c.Total_Cost_of_Attendance__c</summarizedField>
    <summaryForeignKey>Campaign_ASA_Attendees__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>