force-app/main/default/objects/Campaign/fields/Resources_Needed__c.field-meta.xml
<CustomField>
    <fullName>Resources_Needed__c</fullName>
    <inlineHelpText>Use this field to note needed/requested resources, such as: A/V equipment, supplies, special room set ups, materials, snacks/prizes, food (lunch/breakfast).</inlineHelpText>
    <label>Resources Needed</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>