force-app/main/default/objects/Campaign/fields/Room_Rate__c.field-meta.xml
<CustomField>
    <fullName>Room_Rate__c</fullName>
    <description>Room rate negotiated for blocked rooms.</description>
    <label>Room Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>