force-app/main/default/objects/Campaign/fields/Rooms_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Rooms_Reserved__c</fullName>
    <description>The number of hotel rooms reserved/blocked at for the entire conference.</description>
    <label># Rooms Reserved</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>