force-app/main/default/objects/Campaign/fields/RSVP_Deadline__c.field-meta.xml
<CustomField>
    <fullName>RSVP_Deadline__c</fullName>
    <description>RSVP deadline date listed on invitation</description>
    <label>RSVP Deadline</label>
    <type>Date</type>
</CustomField>