force-app/main/default/objects/Campaign/fields/Service_Year__c.field-meta.xml
<CustomField>
    <fullName>Service_Year__c</fullName>
    <label>Service Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2011-2012</fullName>
            </value>
            <value>
                <fullName>2012-2013</fullName>
            </value>
            <value>
                <fullName>2013-2014</fullName>
            </value>
            <value>
                <fullName>2014-2015</fullName>
            </value>
            <value>
                <fullName>2015-2016</fullName>
            </value>
            <value>
                <fullName>2016-2017</fullName>
            </value>
            <value>
                <fullName>2017-2018</fullName>
            </value>
            <value>
                <fullName>2018-2019</fullName>
            </value>
            <value>
                <fullName>2019-2020</fullName>
            </value>
            <value>
                <fullName>Prior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>