force-app/main/default/objects/Campaign/fields/Session_s_Presented__c.field-meta.xml
<CustomField>
    <fullName>Session_s_Presented__c</fullName>
    <description>What is being presented at the conference.</description>
    <label>Session(s) Presented</label>
    <type>TextArea</type>
</CustomField>