force-app/main/default/objects/Campaign/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <description>Where the Booth and other materials should be shipped.</description>
    <label>Shipping Address</label>
    <type>TextArea</type>
</CustomField>