force-app/main/default/objects/Campaign/fields/Speakers__c.field-meta.xml
<CustomField>
    <fullName>Speakers__c</fullName>
    <description>Who will be the key speakers at the Symposium</description>
    <label>Speakers</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>