force-app/main/default/objects/Campaign/fields/Sponsored_Item__c.field-meta.xml
<CustomField>
    <fullName>Sponsored_Item__c</fullName>
    <description>What items is being sponsored</description>
    <label>Sponsored Item</label>
    <type>TextArea</type>
</CustomField>