force-app/main/default/objects/Campaign/fields/Sponsorship_Amt__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Amt__c</fullName>
    <label>Sponsorship Amt</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>