force-app/main/default/objects/Campaign/fields/Sponsorship_Level__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Level__c</fullName>
    <label>Sponsorship Level</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>