force-app/main/default/objects/Campaign/fields/Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime__c</fullName>
    <label>Start DateTime</label>
    <type>DateTime</type>
</CustomField>