force-app/main/default/objects/Campaign/fields/Table_Sign__c.field-meta.xml
<CustomField>
    <fullName>Table_Sign__c</fullName>
    <description>What will they have at the table to represent the Sponsorship</description>
    <label>Table Sign</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sign</fullName>
            </value>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>