force-app/main/default/objects/Campaign/fields/Tablecloth_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Tablecloth_Received_Date__c</fullName>
    <label>Tablecloth Received Date</label>
    <type>Date</type>
</CustomField>