force-app/main/default/objects/Campaign/fields/Tablecloth_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Tablecloth_Sent_Date__c</fullName>
    <label>Tablecloth Sent Date</label>
    <type>Date</type>
</CustomField>