force-app/main/default/objects/Campaign/fields/Targe_Audience__c.field-meta.xml
<CustomField>
    <fullName>Targe_Audience__c</fullName>
    <label>Target Audience</label>
    <type>TextArea</type>
</CustomField>