force-app/main/default/objects/Campaign/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Time the training is going to happen</description>
    <label>Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>