force-app/main/default/objects/Campaign/fields/Topics__c.field-meta.xml
<CustomField>
    <fullName>Topics__c</fullName>
    <description>What will be presented at the workshop?</description>
    <label>Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASA Overview (Lenders)</fullName>
            </value>
            <value>
                <fullName>Assessing &amp; Addressing Your IT Security</fullName>
            </value>
            <value>
                <fullName>Bringing XML into Focus</fullName>
            </value>
            <value>
                <fullName>Communicating with Millennial Students</fullName>
            </value>
            <value>
                <fullName>Developing a Technology Plan</fullName>
            </value>
            <value>
                <fullName>Emotional Intelligence</fullName>
            </value>
            <value>
                <fullName>FERPA &amp; GLB Featuring Internet Security</fullName>
            </value>
            <value>
                <fullName>Go with the Flows</fullName>
            </value>
            <value>
                <fullName>How Automated Are You?</fullName>
            </value>
            <value>
                <fullName>How Your Personality Impacts Your Team</fullName>
            </value>
            <value>
                <fullName>Increase FAO Visibility &amp; Impact</fullName>
            </value>
            <value>
                <fullName>It&#39;s an E-Signature Kind of World</fullName>
            </value>
            <value>
                <fullName>Student Success</fullName>
            </value>
            <value>
                <fullName>The Financially Savvy Professional</fullName>
            </value>
            <value>
                <fullName>The Top 10 Financial Aid Pitfalls</fullName>
            </value>
            <value>
                <fullName>Website Usability</fullName>
            </value>
            <value>
                <fullName>We’ve Got to Stop Meeting Like This!</fullName>
            </value>
            <value>
                <fullName>Writing an Effective RFP</fullName>
            </value>
            <value>
                <fullName>You’ve Got Mail!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>