force-app/main/default/objects/Campaign/fields/Total_Attending__c.field-meta.xml
<CustomField>
    <fullName>Total_Attending__c</fullName>
    <formula>NumberOfResponses  +  Number_of_Guests__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Attending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>