force-app/main/default/objects/Campaign/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <inlineHelpText>Enter the Tracking Number of the package containing the Materials Sent.</inlineHelpText>
    <label>Tracking Number</label>
    <type>TextArea</type>
</CustomField>