force-app/main/default/objects/Campaign/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <description>Who will be the trainer at this event</description>
    <label>Trainer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andrew Marley</fullName>
            </value>
            <value>
                <fullName>Betsy Mayotte</fullName>
            </value>
            <value>
                <fullName>Gina Lucente-Cole</fullName>
            </value>
            <value>
                <fullName>Jonathan Sparling</fullName>
            </value>
            <value>
                <fullName>Lorinda Diehl</fullName>
            </value>
            <value>
                <fullName>Jacquie Carroll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>