force-app/main/default/objects/Campaign/fields/Training_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Date__c</fullName>
    <description>Day the training is scheduled to take place</description>
    <label>Training Event Date</label>
    <type>Date</type>
</CustomField>