force-app/main/default/objects/Campaign/fields/Training_Locatio_Website__c.field-meta.xml
<CustomField>
    <fullName>Training_Locatio_Website__c</fullName>
    <description>The website for the training location with directions example.</description>
    <label>Training Location Website</label>
    <type>Url</type>
</CustomField>