force-app/main/default/objects/Campaign/fields/Training_Location__c.field-meta.xml
<CustomField>
    <fullName>Training_Location__c</fullName>
    <description>Training event location</description>
    <label>Training City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baltimore, MD</fullName>
            </value>
            <value>
                <fullName>Boston MA (ASA)</fullName>
            </value>
            <value>
                <fullName>Crystal City, VA</fullName>
            </value>
            <value>
                <fullName>Hamden, CT</fullName>
            </value>
            <value>
                <fullName>Hampton, VA</fullName>
            </value>
            <value>
                <fullName>Hartford, CT</fullName>
            </value>
            <value>
                <fullName>Las Vegas, NV</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Phoenix, AZ</fullName>
            </value>
            <value>
                <fullName>Tucson, AZ</fullName>
            </value>
            <value>
                <fullName>Worcester, MA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>