force-app/main/default/objects/Campaign/fields/Training_Location_Detail__c.field-meta.xml
<CustomField>
    <fullName>Training_Location_Detail__c</fullName>
    <description>Training facilitity detail: Hotel, School, or Confernece center (eg: Holy Cross Hogan Center)</description>
    <label>Training Location Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>