force-app/main/default/objects/Campaign/fields/Venue_Contact__c.field-meta.xml
<CustomField>
    <fullName>Venue_Contact__c</fullName>
    <description>Contact at the venue</description>
    <label>Venue Contact</label>
    <type>TextArea</type>
</CustomField>