force-app/main/default/objects/Campaign/fields/Venue_Name__c.field-meta.xml
<CustomField>
    <fullName>Venue_Name__c</fullName>
    <description>Where is the reception being held?  Ex Marriot, Gand Ballroom</description>
    <label>Venue Name</label>
    <type>TextArea</type>
</CustomField>