force-app/main/default/objects/Campaign/fields/Venue_Website__c.field-meta.xml
<CustomField>
    <fullName>Venue_Website__c</fullName>
    <description>Website for the Venue</description>
    <label>Venue Website</label>
    <type>Url</type>
</CustomField>