force-app/main/default/objects/Campaign/fields/X10X10_Booth_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>X10X10_Booth_Received_Date__c</fullName>
    <label>10X10 Booth Received Date</label>
    <type>Date</type>
</CustomField>