force-app/main/default/objects/Campaign/fields/X20_Days_Date_Received_Reminder__c.field-meta.xml
<CustomField>
    <fullName>X20_Days_Date_Received_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>20 Days Date Received Reminder</label>
    <type>Checkbox</type>
</CustomField>