force-app/main/default/objects/Campaign/fields/Zip_4__c.field-meta.xml
<CustomField>
    <fullName>Zip_4__c</fullName>
    <label>Zip+4</label>
    <length>10</length>
    <type>Text</type>
</CustomField>