force-app/main/default/objects/Campaign/recordTypes/ASASymposium.recordType-meta.xml
<RecordType>
    <fullName>ASASymposium</fullName>
    <active>false</active>
    <description>Specail Record type for ASA&#39;s Symposium</description>
    <label>ASA Symposium</label>
</RecordType>