force-app/main/default/objects/Campaign/recordTypes/Conference.recordType-meta.xml
<RecordType>
    <fullName>Conference</fullName>
    <active>true</active>
    <description>All Conferences</description>
    <label>Conference</label>
</RecordType>