force-app/main/default/objects/Campaign/recordTypes/CPS_EOC.recordType-meta.xml
<RecordType>
    <fullName>CPS_EOC</fullName>
    <active>true</active>
    <description>Used to record yearly EOC member data for APR.</description>
    <label>CPS - EOC</label>
</RecordType>