force-app/main/default/objects/Campaign/recordTypes/CPS_Group_Event.recordType-meta.xml
<RecordType>
    <fullName>CPS_Group_Event</fullName>
    <active>true</active>
    <description>Used to track member check-ins to CPS Group events</description>
    <label>CPS Group Event</label>
</RecordType>