force-app/main/default/objects/Campaign/recordTypes/CPS_TS.recordType-meta.xml
<RecordType>
    <fullName>CPS_TS</fullName>
    <active>true</active>
    <description>Used to record yearly TS member data for APR.</description>
    <label>CPS - TS</label>
</RecordType>