force-app/main/default/objects/Campaign/recordTypes/CPS_UB.recordType-meta.xml
<RecordType>
    <fullName>CPS_UB</fullName>
    <active>true</active>
    <description>Used to record yearly UB member data for APR.</description>
    <label>CPS - UB</label>
</RecordType>