force-app/main/default/objects/Campaign/recordTypes/CSWorkshop.recordType-meta.xml
<RecordType>
    <fullName>CSWorkshop</fullName>
    <active>true</active>
    <description>Workshops held by Professional Services to generate new business/recognition</description>
    <label>CS Workshop</label>
</RecordType>