force-app/main/default/objects/Campaign/recordTypes/Mailing.recordType-meta.xml
<RecordType>
    <fullName>Mailing</fullName>
    <active>true</active>
    <description>Campaign done via mail, Holiday Card, Collateral Material, System / Product Upates</description>
    <label>Mailing</label>
</RecordType>