force-app/main/default/objects/Campaign/recordTypes/Meeting.recordType-meta.xml
<RecordType>
    <fullName>Meeting</fullName>
    <active>true</active>
    <description>This campaign is used to set up meetings using Contacts from various Accounts; e.g. Advisory Council</description>
    <label>Meeting</label>
</RecordType>