force-app/main/default/objects/Campaign/recordTypes/PressRelease.recordType-meta.xml
<RecordType>
    <fullName>PressRelease</fullName>
    <active>true</active>
    <description>This is used to communicate information to the local or national press.</description>
    <label>Press Release</label>
</RecordType>