force-app/main/default/objects/Campaign/recordTypes/Reception.recordType-meta.xml
<RecordType>
    <fullName>Reception</fullName>
    <active>true</active>
    <description>Dinner/Cocktail or other similar event at a conference or regional party that RSVP is needed</description>
    <label>Reception</label>
</RecordType>