force-app/main/default/objects/Campaign/recordTypes/ThinkAboutTomorrowTour.recordType-meta.xml
<RecordType>
    <fullName>ThinkAboutTomorrowTour</fullName>
    <active>true</active>
    <description>Special function Marketing runs at different Colleges/Universities as part of Wellness</description>
    <label>Think About Tomorrow Tour</label>
</RecordType>