force-app/main/default/objects/Campaign/recordTypes/TrainingEvent.recordType-meta.xml
<RecordType>
    <fullName>TrainingEvent</fullName>
    <active>true</active>
    <description>Training offered externally to many schools</description>
    <label>Training Event</label>
</RecordType>