force-app/main/default/objects/Campaign/validationRules/CPS_Group_Event_Must_Be_Active_On_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>CPS_Group_Event_Must_Be_Active_On_Create</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),
IsActive = FALSE,
 RecordType.Name = &quot;CPS Group Event&quot; )</errorConditionFormula>
    <errorMessage>Please create your group event as Active (so that members can check into it)</errorMessage>
</ValidationRule>