force-app/main/default/objects/Campaign/listViews/Client_Forum_2015_Waltham_MA.listView-meta.xml
<ListView>
    <fullName>Client_Forum_2015_Waltham_MA</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>equals</operation>
    </filters>
    <label>Client Forum 2015</label>
    <sharedTo>
        <role>TopLevel</role>
    </sharedTo>
</ListView>