force-app/main/default/objects/Campaign/listViews/CPS_Group_Events_Upcoming.listView-meta.xml
<ListView>
    <fullName>CPS_Group_Events_Upcoming</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CPS_Center_Affiliation_Intake_Location__c</columns>
    <columns>Start_DateTime__c</columns>
    <columns>End_DateTime__c</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>Resources_Needed__c</columns>
    <columns>CPS_Advisor__c</columns>
    <columns>Estimated_Number_Attending__c</columns>
    <columns>Attendee_Population_Type__c</columns>
    <columns>Hosting_Partner__c</columns>
    <columns>Hosting_Partner_EOC__c</columns>
    <columns>Service_Year__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.CPS_Group_Event</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>notContain</operation>
        <value>Template</value>
    </filters>
    <filters>
        <field>Start_DateTime__c</field>
        <operation>greaterThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>CPS Group Events Upcoming</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>